--- a/src/app/pages/tab1/tab1.page.html
+++ b/src/app/pages/tab1/tab1.page.html
@@ -18,6 +18,10 @@
 
   <!-- Posts -->
   <app-posts [posts]="posts"></app-posts>
-  <!-- Infinite scroll -->
 
+  <!-- Infinite scroll -->
+  <ion-infinite-scroll threshold="150px" (ionInfinite)="siguientes($event)">
+      <ion-infinite-scroll-content>
+      </ion-infinite-scroll-content>
+    </ion-infinite-scroll>
 </ion-content>
