--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -61,25 +61,8 @@
       
       <ion-grid fixed>
 
-            <ion-row>
-            <ion-col>
-                <h3>Seleccione Avatar</h3>
-            </ion-col>
-            </ion-row>
-
-            <ion-row>
-            <ion-col>
-                <ion-slides [options]="avatarSlide">
-                <ion-slide *ngFor="let avatar of avatars">
-                    <ion-img class="pick-avatar" 
-                            src="/assets/avatars/{{ avatar.img }}"
-                            [ngClass]="{ 'pick-avatar-seleccionado': avatar.seleccionado }"
-                            (click)="seleccionarAvatar( avatar )"></ion-img>
-                </ion-slide>
-                </ion-slides>
-            </ion-col>
-            </ion-row>
-        
+            <app-avatar-selector (avatarSel)="registerUser.avatar = $event"></app-avatar-selector>
+                  
             <form (ngSubmit)="registro( fRegistro )" #fRegistro="ngForm">
                 <ion-row>
                     <ion-col>
