Actualizar el usuario en la BD

--- a/src/app/pages/tab3/tab3.page.html
+++ b/src/app/pages/tab3/tab3.page.html
@@ -31,7 +31,7 @@
 
   <app-avatar-selector></app-avatar-selector>
 
-  <form>
+  <form (ngSubmit)="actualizar( fActualizar )" #fActualizar>
       <ion-row>
         <ion-col>
           
