Mostrar coords en el mapa

--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -24,6 +24,8 @@
     </ion-slide>
   </ion-slides>
 
+  <app-mapa [coords]="post.coords"></app-mapa>
+
   <ion-item lines="none">
     <ion-icon slot="start" name="heart-empty"></ion-icon>
     <ion-icon slot="end" name="bookmark"></ion-icon>
